--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/wylie-u/Team-Profile-Generator#readme",
   "dependencies": {
+    "fs": "0.0.1-security",
     "inquirer": "^8.0.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "path": "^0.12.7"
   }
 }
